--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 <h1 style="color:#9D2235">Nu tu esi brīvs</h1>
 <h1>Nu tu esi brīvs</h1>
 
-</body>
+<p>I will display &#65; &#66; &#67;</p>  
+
+  </body>
 </html>
